# Practicas-Estructuras-de-Datos

./: README.md
Lista/: CMakeLists.txt  ListaEstatica.c  ListaEstatica.h  main.c  tElemento.c  tElemento.h
PRACTICAS/ColasPrioridad/: CMakeLists.txt  colaCircular.c  colaCircular.h  elemento.c  elemento.h  fecha.c  fecha.h  hospital.c  hospital.h  listaPrioridades.c  listaPrioridades.h  main.c  prioridad.c  prioridad.h
PRACTICAS/FakeNews/: CMakeLists.txt  main.c  tElemento.c  tElemento.h  tFecha.c  tFecha.h  tLista.c  tLista.h
PRACTICAS/MensajeInterceptado/: CMakeLists.txt  elemento.c  elemento.h  lista.c  lista.h  main.c  pila.c  pila.h
PRACTICAS/Polinomios/: CMakeLists.txt  elemento.c  elemento.h  listaOrdenada.c  listaOrdenada.h  polinomio.c  polinomio.h
PRACTICAS/PracticaColasPrioridades/: CMakeLists.txt  tCola.c  tCola.h  tElemento.c  tElemento.h  tFecha.c  tFecha.h  tPrioridad.c  tPrioridad.h
PRACTICAS/Practica_Listas/: CMakeLists.txt  elemento.c  elemento.h  fecha.c  fecha.h  listaCircular.c  listaCircular.h  main.c
PRACTICAS/RepartiendoElBotin/: CMakeLists.txt  cola.c  cola.h  elemento.c  elemento.h  main.c
PRACTICAS/arboles_dioses/: CMakeLists.txt  main.c  tArbolBin.c  tArbolBin.h  tElemento.c  tElemento.h
PRACTICAS/arboles_twitter/: CMakeLists.txt  UArbolBB.c  UArbolBB.h  main.c  tArbolBB.c  tArbolBB.h  tElemento.c  tElemento.h  (+2 more)
PRACTICAS/grafos_vuelos/: CMakeLists.txt  main.c  tCiudad.c  tCiudad.h  tGrafo.c  tGrafo.h  tListaAdyacencia.c  tListaAdyacencia.h  tVuelo.c  tVuelo.h  usoGrafo.c  usoGrafo.h
log2_recursiva/: CMakeLists.txt  main.c
(+14 files in other folders)
